# ocr-script

./: .gitignore  img_text_conv.py  pyproject.toml  requirements.txt
