[tool.poetry]
name = "ocr-reader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.7.3"
pandas = "1.3.4"
numpy = "^1.21.2"
pytesseract = "^0.3.8"
pdf2image = "^1.16.0"
opencv-python = "^4.5.3"
pyspellchecker = "^0.6.2"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
